# SRAD-Avionics

./: .gitignore  .gitmodules  README.md  record.py  telemetry_1759684649.csv  telemetry_1759684746.csv  telemetry_1759684845.csv  telemetry_1759684899.csv  telemetry_1759687096.csv  telemetry_1762103128.csv  telemetry_1762103141.csv  telemetry_1762107709.csv  telemetry_1762108285.csv  telemetry_1762108541.csv  telemetry_1762108586.csv  telemetry_1762109347.csv  telemetry_1762109713.csv  telemetry_1762109745.csv  telemetry_1762109857.csv  telemetry_1762110057.csv  telemetry_1762110075.csv  telemetry_1762110197.csv  telemetry_1762110359.csv  telemetry_1767312154.csv  test.sh  viz copy.py  viz.py  viz_airbrake.py  viz_pratheek.py
Side_Projects/ARC/: .gitignore  ARC.service  ARC_contoller.py  ARC_controller.py  ARC_test.py  CMakeLists.txt  clone.sh  lv_output.hpp  missing-dependencies.txt  mode_switch.sh  readme.md  setup-user.sh  setup.sh
Side_Projects/ARC/ARC_utilities/: .gitignore  app.js  index.html  package-lock.json  package.json
Side_Projects/ARC/ARC_utilities/pages/: 401.html  404.html  501.html  503.html  about.html  admin-login.html  admin.html  submit-fail.html  submit-success.html  submit.html  tutorials.html
Side_Projects/ARC/ARC_utilities/public/: function.js  style.css
Side_Projects/ARC/ARC_utilities/public/css/: about.css  admin.css  index.css  submit.css  tutorials.css
Side_Projects/ARC/ARC_utilities/public/js/: about.js  admin.js  index.js  submit.js  tutorials.js
Side_Projects/ARC/PCBs/: LVPD-board.kicad_pcb  LVPD-board.kicad_pro  LVPD-board.kicad_sch
Side_Projects/ARC/PCBs/LVPD-board_Payload/: LVPD-board_Payload.kicad_pcb  LVPD-board_Payload.kicad_pro  LVPD-board_Payload.kicad_sch
Side_Projects/ARC/PCBs/LVPD-board_v2/: LVPD-board_v2.kicad_sch
Side_Projects/ARC/PCBs/gerbers/LVPD_Payload_v2.0/: LVPD-board_Payload-B_Cu.gbr  LVPD-board_Payload-B_Mask.gbr  LVPD-board_Payload-B_Silkscreen.gbr  LVPD-board_Payload-Edge_Cuts.gbr  LVPD-board_Payload-F_Cu.gbr  LVPD-board_Payload-F_Mask.gbr  LVPD-board_Payload-F_Paste.gbr  LVPD-board_Payload-F_Silkscreen.gbr  LVPD-board_Payload-NPTH.drl  LVPD-board_Payload-PTH.drl  LVPD-board_Payload-job.gbrjob
Side_Projects/ARC/PCBs/gerbers/LVPD_v1.0/: LVPD-board-B_Mask.gbr  LVPD-board-B_Paste.gbr  LVPD-board-F_Cu.gbr  LVPD-board-F_Mask.gbr  LVPD-board-F_Paste.gbr  LVPD-board-F_Silkscreen.gbr
Side_Projects/ARC/PCBs/gerbers/LVPD_v2.0/: LVPD-board_v2-B_Paste.gbr  LVPD-board_v2-Edge_Cuts.gbr  LVPD-board_v2-F_Paste.gbr  LVPD-board_v2-F_Silkscreen.gbr  LVPD-board_v2-PTH.drl  LVPD-board_v2-job.gbrjob
Side_Projects/ARC/live-video-teensy/: .gitignore  platformio.ini
Side_Projects/ARC/live-video-teensy/include/: 422Mc110_4GFSK_100000U.h  422Mc86_4GFSK_500000H.h  433M_2GFSK_000500.h
Side_Projects/ARC/live-video-teensy/rscode-cpp/include/: definitions.h
Side_Projects/ARC/live-video-teensy/rscode-cpp/src/: crcgen.cpp  galois.h  rs.h
Side_Projects/ARC/live-video-teensy/src/: main.cpp
Side_Projects/ARC/live-video-teensy/test/: main.cpp  receiveDS.cpp  receiver.cpp  transmitLite.cpp  transmitLiter.cpp  transmitter.cpp
Side_Projects/ARC/mux/3-stream/inputs/: vid1.av1  whattaburger.txt
Side_Projects/ARC/scripts/: live_video_handler.py  local_video_handler.py  pin5high.py  video_handler.py
Side_Projects/ARC/teensy-interface/: Makefile  main.cpp  test2.txt
Side_Projects/ARC/tests/: localsave.sh  localsave1080p.sh  networkstream.sh
Spaceport/Code/Bluetooth/: .cursorrules  CMakeLists.txt  MainWindow.cpp  MainWindow.h  RocketController.cpp  RocketController.h  YourProject.pro  main.cpp
Spaceport/Code/Radio/lib/Message/src/: Data.h  (+1 more)
(+1985 files in other folders)
